--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,4 +34,8 @@ jobs:
       with:
         name: app-jar
         path: test/target/*.jar
-
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+          username: gajulapavanhruthik33@gmail.com
+          password: Veera@123
